--- a/src/app/thank-you-message/thank-you-message.component.html
+++ b/src/app/thank-you-message/thank-you-message.component.html
@@ -1,4 +1,4 @@
-<div class="container m-auto p-4">
+<!-- <div class="container m-auto p-4">
     <div class="row">
         <div class="col-6">
             <div class="card p-2">
@@ -23,4 +23,8 @@
             </div>
         </div>
     </div>
+</div> -->
+<div>
+    <ckeditor [editor]="Editor" data="<p>Hello, world!</p>" (ready)="onReady($event)"></ckeditor>
+    <!-- <button type="button" class="btn btn-primary" (click)="thankyouMessage()">Submit</button> -->
 </div>
