--- a/src/app/my-cart/my-cart.component.html
+++ b/src/app/my-cart/my-cart.component.html
@@ -20,18 +20,18 @@
                 <td>{{products.itemName}}</td>
                 <td class="product-price">{{products.itemPrice}}</td>
                 <td class="product-quantity">
-                    <input type="number"  min="1" [(ngModel)]="products.quantity">
+                    <input type="number"  min="1" [(ngModel)]="products.quantity" (change)="finalTotal($event.target.value)">
                 </td>
                 <td>
-                    <button type="button" class="btn btn-danger">Remove
+                    <button type="button" class="btn btn-danger" (click)="removeItem(products._id)" >Remove
                     </button>
                 </td>
-                <td ng-init="count = (count + (products.itemPrice * products.quantity))">{{products.itemPrice * products.quantity }}</td>
+                <td>{{products.itemPrice * products.quantity }}</td>
             </tr>
             <tr>
-                <td colspan="7">Grand Total</td>
                 <td>
-                    {{count}}
+                    <button type="button" class="btn btn-primary" (click)="allItem(cartDetails)">Procced To Pay
+                    </button>
                 </td>
             </tr>
         </tbody>
