--- a/src/app/view-event/view-event.component.css
+++ b/src/app/view-event/view-event.component.css
@@ -3,3 +3,7 @@
     background-repeat: no-repeat !important;
     background-size: cover !important;
 }
+.card{
+    background-color: #0909095e !important;
+    color: white;
+}
