--- a/src/app/view-event/view-event.component.html
+++ b/src/app/view-event/view-event.component.html
@@ -35,12 +35,12 @@
                                     <div class="row">
                                         <div class="col-lg-8 m-auto ">
                                             <div *ngFor="let activity of activityArray" class="card p-5">
-                                                <h2 class="text-success text-center"> Activity:
+                                                <h2 class="text-warning text-center"> Activity:
                                                     {{activity.activityName}}</h2>
                                                 <div *ngFor="let group of activity.group">
                                                     <div class="row">
                                                         <div class="col-lg-12">
-                                                            <h3 class="text-info">Group: {{group.groupName}}</h3>
+                                                            <h3 class="text-danger">Group: {{group.groupName}}</h3>
                                                         </div>
                                                         <div class="col-lg-6">
                                                             <div class="row">
@@ -49,7 +49,7 @@
                                                                 </div>
                                                                 <div class="col-lg-6">
                                                                     <button type="button" class="btn btn-info"
-                                                                        (click)="addToCart(group._id, activity.activityId, item._id, group.male,'male')">Add
+                                                                        (click)="addToCart(group._id, activity.activityId, item._id, group.male,'male')" [disabled] = "isDisable">Add
                                                                         To Cart </button>
                                                                 </div>
                                                                 <div class="col-lg-12">
