--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -32,3 +32,25 @@
     </form>
   </div>
 </nav>
+
+
+
+<!-- Admin Panel -->
+
+
+<div class="header">
+  <a id="menu-action">
+    <i class="fa fa-bars"></i>
+    <span>Close</span>
+  </a>
+  <div class="logo">
+    Admin Panel
+  </div>
+</div>
+<div class="sidebar">
+  <ul>
+    <li><a href="#"><i class="fa fa-desktop"></i><span>Total Events</span></a></li>
+    <li><a href="#"><i class="fa fa-server"></i><span>Total Users</span></a></li>
+    <li><a href="#"><i class="fa fa-calendar"></i><span>Settings</span></a></li>
+    </ul>
+</div>
