--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -38,7 +38,7 @@
 <!-- Admin Panel -->
 
 
-<div class="header">
+<div class="header" *ngIf="!currentuser">
   <a id="menu-action">
     <i class="fa fa-bars"></i>
     <span>Close</span>
@@ -46,11 +46,11 @@
   <div class="logo">
     Admin Panel
   </div>
-</div>
-<div class="sidebar">
-  <ul>
-    <li><a href="#"><i class="fa fa-desktop"></i><span>Total Events</span></a></li>
-    <li><a href="#"><i class="fa fa-server"></i><span>Total Users</span></a></li>
-    <li><a href="#"><i class="fa fa-calendar"></i><span>Settings</span></a></li>
+  <div class="sidebar">
+    <ul>
+      <li><a href="#"><i class="fa fa-desktop"></i><span>Total Events</span></a></li>
+      <li><a href="#"><i class="fa fa-server"></i><span>Total Users</span></a></li>
+      <li><a href="#"><i class="fa fa-calendar"></i><span>Settings</span></a></li>
     </ul>
+  </div>
 </div>
