--- a/src/app/my-event/my-event.component.html
+++ b/src/app/my-event/my-event.component.html
@@ -32,7 +32,7 @@
                         </div>
 
                         <div class="col-6">
-                                <button type="button" class="btn btn-primary" (click)="ThankYouMessage(item._id)">Thank You Message
+                                <button type="button" class="btn btn-primary" (click)="ThankYouMessage(item._id)" *ngIf="isCelebrant == 'true'">Thank You Message
                                 </button>
                             </div>
                     </div>
